# rf-signal-processing

./: .editorconfig  .gitignore  LICENSE  README.md  _config.yml  index.html  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  pages.yml
_layouts/: default.html
docs/: From Archive to Insight.html  From Archive to Insight.md  Provide the fully cleaned final version.html  Provide the fully cleaned final version.md  _config.yml  analysis-report.html  analysis-report.md  deep-research-report.html  deep-research-report.md  deep_sanitised.html  index.html  research_viz_sanitised.html  rf_visualization_full_spec.html  rf_visualization_full_spec.md  sparam_viewer-sanitised.html
docs/_layouts/: default.html
docs/assets/css/: style.css
pipeline/: README.md  config.yaml  requirements.txt  s2p_tda_rtx4070.py  visualize_pipeline.py
pipeline/outputs/s2p_tda_rtx4070/: ingestion_diagnostics.csv  interpolation_summary.csv  run_manifest.json  summary_frequency_metrics.csv
pipeline/outputs/s2p_tda_rtx4070/bayes/: unit_1_credible_bands.csv  unit_1_hdi_scalar_summary.csv  unit_2_credible_bands.csv  unit_2_hdi_scalar_summary.csv  unit_3_credible_bands.csv  unit_3_hdi_scalar_summary.csv  unit_4_credible_bands.csv  unit_4_hdi_scalar_summary.csv
pipeline/outputs/s2p_tda_rtx4070/metrics/: unit_1_frequency_metrics.csv  unit_2_frequency_metrics.csv  (+2 more)
pipeline/rf_pipeline/: __init__.py  bayes.py  config.py  interpolation.py  io.py  metrics.py  ml.py  plotting.py  runner.py  time_domain.py  topology.py  vector_fit.py
pipeline/synthetic_data/: compare_models.py  generate_synthetic.py  utils.py
pipeline/synthetic_data/results/: results_classification.csv  results_lro_classification.csv  results_lro_regression.csv  results_regression.csv  synthetic_features.csv
(+77 files in other folders)
